--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<html>
+<!DOCTYPE html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8267614030643648"
+     crossorigin="anonymous"></script>
 <title>home</title>
-<head>
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+<link rel="manifest" href="./site.webmanifest">
+<link rel="stylesheet" href="main.css">
+<script type="text/javascript" src="./main.js"></script>
+</head>
 <body>
-<h1>derp's webhome</h1>
-<hr>
 <br>
-<b>shortcuts</b>
-
+<div id="mainDiv" class="container">
+<div style="text-align: center;">
+<h1>home</h1>
+</div>
+<br>
+</p>
+<hr>
+<p>bluecherry_(c) 2023</p>
+</div>
 </body>
