--- a/index.html
+++ b/index.html
@@ -14,10 +14,25 @@
 <br>
 <div id="mainDiv" class="container">
 <div style="text-align: center;">
-<h1>home</h1>
+<h1>Home</h1>
 </div>
 <br>
-  <a href=./contain1.html>protohub</a>
+  <a href="https://github.com">GitHub</a>
+  <br>
+  <a href="https://youtube.com">YouTube</a>
+  <br>
+  <a href="https://mail.google.com/u/0">Home Email Account</a>
+  <br>
+  <a href="https://mail.google.com/u/1">School Email Account</a>
+  <br>
+  <a href="https://fcpsoff.slack.com">FCPSOff Slack</a>
+  <br>
+  <a href="https://derplord3264.github.io/games/hl">Half Life</a>
+  <br>
+  <a href="https://stackoverflow.com">Stack Overflow</a>
+  <br>
+  <a href="./contain1.html">SecuredLink 1</a>
+  <br>
 </p>
 <hr>
 <p>bluecherry_(c) 2023</p>
