--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <br>
   <a href="https://youtube.com">YouTube</a>
   <br>
-  <a href="https://mail.google.com/u/0">Home Email Account</a>
+  <a href="https://mail.google.com/mail/u/0">Home Email Account</a>
   <br>
-  <a href="https://mail.google.com/u/1">School Email Account</a>
+  <a href="https://mail.google.com/mail/u/1">School Email Account</a>
   <br>
   <a href="https://fcpsoff.slack.com">FCPSOff Slack</a>
   <br>
