--- a/contain1.html
+++ b/contain1.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <iframe width="100%" height="100%"
-    src="https://protohub.online"
+    src="https://sourga.me"
     frameborder="0" allowfullscreen="" style="position:absolute; top:0; left: 0">
   </iframe>
-<script type='text/javascript'  src="https://demo.filestash.app/93791460bd4591916fae6788dd691570096e47a0e47061cdead407edc2363560/inject.js"></script>
 </body>
